--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "connected-react-router": "^6.8.0",
     "dayjs": "^1.9.6",
     "history": "4.10.1",
+    "jquery": "^3.5.1",
     "lodash.groupby": "^4.6.0",
     "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
