--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "history": "4.10.1",
     "jquery": "^3.5.1",
     "lodash.groupby": "^4.6.0",
+    "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.1",
     "react-particles-js": "^3.4.1",
     "react-redux": "^7.2.2",
