--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "suppressImplicitAnyIndexErrors": true,
     "baseUrl": "src",
     "noFallthroughCasesInSwitch": true,
-    "jsx": "react"
+    "jsx": "react-jsx"
   },
   "include": ["src"]
 }
