--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scrollbars-custom": "^4.0.25",
+    "react-select": "^3.1.1",
     "react-toastify": "^6.1.0",
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
@@ -94,6 +95,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-select": "^3.0.27",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
