--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
+    "compression": "^1.7.4",
     "connected-react-router": "^6.8.0",
     "dayjs": "^1.9.6",
+    "express": "^4.17.1",
     "history": "4.10.1",
     "jquery": "^3.5.1",
     "lodash.groupby": "^4.6.0",
