--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.2",
